--- a/Graphics Coursework/GraphicsCoursework.vcxproj
+++ b/Graphics Coursework/GraphicsCoursework.vcxproj
@@ -80,6 +80,11 @@
     <None Include="..\..\Shaders\CourseFragmentShader.glsl" />
     <None Include="..\..\Shaders\CourseVertexShader.glsl" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\nclgl\nclgl.vcxproj">
+      <Project>{98d6b51b-cb0a-4389-adc6-24082b967c3f}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
