--- a/1) Your First Triangle/Tutorial1.vcxproj
+++ b/1) Your First Triangle/Tutorial1.vcxproj
@@ -79,6 +79,10 @@
   <ItemGroup>
     <ClInclude Include="Renderer.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Shaders\basicVertex.glsl" />
+    <None Include="..\..\Shaders\colourFragment.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
