--- a/1) Your First Triangle/Tutorial1.vcxproj.filters
+++ b/1) Your First Triangle/Tutorial1.vcxproj.filters
@@ -23,4 +23,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Shaders\basicVertex.glsl">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="..\..\Shaders\colourFragment.glsl">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
