--- a/2) Matrix Transformations/Tutorial2.vcxproj
+++ b/2) Matrix Transformations/Tutorial2.vcxproj
@@ -77,6 +77,10 @@
   <ItemGroup>
     <ClInclude Include="Renderer.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Shaders\colourFragment.glsl" />
+    <None Include="..\..\Shaders\MatrixVertex.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
