--- a/nclgl/nclgl.vcxproj
+++ b/nclgl/nclgl.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="OBJMesh.cpp" />
     <ClCompile Include="OGLRenderer.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Quaternion.cpp" />
     <ClCompile Include="SceneNode.cpp" />
@@ -55,6 +56,7 @@
     <ClInclude Include="OBJMesh.h" />
     <ClInclude Include="OGLRenderer.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleEmitter.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="SceneNode.h" />
